修正了软件版本管理

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,8 @@ android {
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
-        versionName "2.3.00509"
+        versionName "1.0"
+//        resValue "string", "app_name", "RFID_PDA_v${versionName}"
 //        getVerName("1.0.")
     }
 
@@ -27,7 +28,7 @@ android {
 
         applicationVariants.all { variant ->
             variant.outputs.all {
-                def fileName = "RFIDDemo_${defaultConfig.versionName}.apk"//_${buildType.name} --> debug 或 release
+                def fileName = "RFID_PDA_${defaultConfig.versionName}.apk"//_${buildType.name} --> debug 或 release
                 outputFileName = fileName
             }
         }
