--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
 //        resValue "string", "app_name", "RFID_PDA_v${versionName}"
 //        getVerName("1.0.")
     }
@@ -28,7 +28,7 @@ android {
 
         applicationVariants.all { variant ->
             variant.outputs.all {
-                def fileName = "RFID_PDA_${defaultConfig.versionName}.apk"//_${buildType.name} --> debug 或 release
+                def fileName = "RFID_PDA_v${defaultConfig.versionName}.apk"//_${buildType.name} --> debug 或 release
                 outputFileName = fileName
             }
         }
